Convert from in memory database to SQL Server. Create initial migration.

--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/appsettings.json
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore.SignalR": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Server=localhost\\SQLEXPRESS;Database=ExhibitionCurationPlatform;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
