moved connection string into user secrets to prevent azure connection string appearing in git history.

--- a/ExhibitionCurationPlatform/ExhibitionCurationPlatform/appsettings.json
+++ b/ExhibitionCurationPlatform/ExhibitionCurationPlatform/appsettings.json
@@ -8,8 +8,5 @@
       "Microsoft.AspNetCore.SignalR": "Debug"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=localhost\\SQLEXPRESS;Database=ExhibitionCurationPlatform;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
